# backend/public/swagger.json
@@ -18,12 +18,17 @@
 					},
 					"password": {
 						"type": "string"
+					},
+					"elo": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
 					"id",
 					"username",
-					"password"
+					"password",
+					"elo"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -587,6 +592,39 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "GetGamesByUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/GameOutputDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/games/{gameId}": {
@@ -622,6 +660,52 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/GameOutputDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Games"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "gameId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/games/{gameId}/details": {
+			"get": {
+				"operationId": "GetGameDetails",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"moves": {
+											"items": {},
+											"type": "array"
+										},
+										"board": {
+											"items": {},
+											"type": "array"
+										}
+									},
+									"required": [
+										"moves",
+										"board"
+									],
+									"type": "object"
 								}
 							}
 						}
