# backend/src/controllers/game.controller.ts
@@ -3,7 +3,7 @@ import {
     Post,
     Body,
     Route,
-    Tags, Delete, Path, Get,
+    Tags, Delete, Path, Get, Query,
 } from "tsoa";
 import {GameService} from "../services/game.service";
 import {GameInputDTO, GameOutputDTO} from "../dto/game.dto";
@@ -33,5 +33,19 @@ export class GameController extends Controller {
         @Path() gameId: number
     ): Promise<GameOutputDTO> {
         return GameService.getGame(gameId);
+    }
+
+    @Get("/")
+    public async getGamesByUser(
+        @Query() userId: number
+    ): Promise<GameOutputDTO[]> {
+        return GameService.getGamesByUser(userId);
+    }
+
+    @Get("/{gameId}/details")
+    public async getGameDetails(
+        @Path() gameId: number
+    ): Promise<{ board: Array<any>, moves: Array<any> }> {
+        return GameService.getGameDetails(gameId);
     }
 }
